tests/miniJava/neg/000237_mutation.MiniJava
class java { public static void java Main ( String [ ] java ) { { } } }
